BUG: fix for image not showing

--- a/localWeather/style.css
+++ b/localWeather/style.css
@@ -319,7 +319,7 @@ p { margin: 1.375rem 0; }
   background: url(https://qadirpervez.github.io/localWeather/images/clouds.jpg) no-repeat center center fixed;
 }
 .rainA{
-  background: url(https://qadirpervez.github.io/localWeather/rain.jpeg) no-repeat center center fixed;
+  background: url(https://qadirpervez.github.io/localWeather/images/rain.jpeg) no-repeat center center fixed;
 }
 .snowA{
   background: url(https://qadirpervez.github.io/localWeather/images/snow.jpeg) no-repeat center center fixed;
